--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -25,7 +25,7 @@ a:hover {
 .alert {
   color: gray;
   font-weight: 500;
-  font-size: 14px;
+  font-size: 18px;
   background-color: lightgray;
   border: 1px solid;
   border-radius: 5px;
@@ -41,6 +41,6 @@ a:hover {
 
 .alert.error {
   color: red;
-  background-color: lightcoral;
+  background-color: lightsalmon;
   border-color: red;
 }
